kubernetes/jenkins/routing-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: routing-ingress
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - build.shapingideas.fyi
    secretName: letsencrypt-prod
  rules:  
    - host: build.shapingideas.fyi
      http:
        paths: 
        - path: /
          backend:
            serviceName: cd-jenkins
            servicePort: 8080
